@@ -82,17 +82,14 @@ data/templates/instrument_status_annotation.tt2
 data/templates/instrument_status_annotation_add_ajax.tt2
 data/templates/instrument_status_annotation_create.tt2
 data/templates/instrument_status_create.tt2
-data/templates/instrument_status_list.tt2
 data/templates/instrument_status_menu.tt2
 data/templates/instrument_status_read_xml.tt2
 data/templates/instrument_top.tt2
 data/templates/instrument_update_statuses.tt2
-data/templates/intensity_list.tt2
 data/templates/manufacturer_add.tt2
 data/templates/manufacturer_create.tt2
 data/templates/manufacturer_list.tt2
 data/templates/manufacturer_read.tt2
-data/templates/method_not_used.tt2
 data/templates/run_add.tt2
 data/templates/run_annotation_add_ajax.tt2
 data/templates/run_annotation_add_input_form.tt2
@@ -135,13 +132,10 @@ data/templates/run_status_table.tt2
 data/templates/run_update.tt2
 data/templates/run_update_statuses.tt2
 data/templates/run_update_tags.tt2
-data/templates/run_update_xml.tt2
 data/templates/run_verified.tt2
 data/templates/search_list.tt2
 data/templates/search_list_advanced.tt2
 data/templates/search_list_advanced_ajax.tt2
-data/templates/search_list_advanced_xml.tt2
-data/templates/search_list_xml.tt2
 data/templates/search_read.tt2
 data/templates/tag_form_ajax.tt2
 data/templates/urls.tt2
@@ -281,7 +275,6 @@ lib/npg/util/mailer.pm
 lib/npg/view.pm
 lib/npg/view/administration.pm
 lib/npg/view/annotation.pm
-lib/npg/view/error.pm
 lib/npg/view/instrument.pm
 lib/npg/view/instrument_annotation.pm
 lib/npg/view/instrument_format.pm
@@ -495,7 +488,6 @@ t/16-npg_tracking-daemon-status.t
 t/16-npg_tracking-daemon.t
 t/20-model-run_and_instrument_status.t
 t/20-view-administration.t
-t/20-view-error.t
 t/20-view-instrument.t
 t/20-view-instrument_menus.t
 t/20-view-instrument_mod.t
@@ -939,7 +931,6 @@ t/data/rendered/20-view-run_lane_annotation_bad_lane_and_last.html
 t/data/rendered/20-view-run_lane_annotation_bad_lane_not_last.html
 t/data/rendered/20-view-run_lane_annotation_not_bad_lane.html
 t/data/rendered/20-view-search-advanced-results.html
-t/data/rendered/20-view-search-advanced-results.xml
 t/data/rendered/20-view-search-advanced.html
 t/data/rendered/actions_admin.html
 t/data/rendered/actions_analyst.html
@@ -947,8 +938,6 @@ t/data/rendered/actions_annotator.html
 t/data/rendered/actions_engineer.html
 t/data/rendered/actions_loader.html
 t/data/rendered/actions_public.html
-t/data/rendered/error/add.html
-t/data/rendered/error/list.html
 t/data/rendered/images/HS3.png
 t/data/rendered/images/key.png
 t/data/rendered/instrument.html
