@@ -1,1 +1,0 @@
-[% PROCESS method_not_used.tt2 %]
