@@ -1,29 +1,0 @@
-<h3>Below</h3>
-<table id="int_below" class="sortable zebra">
- <thead>
-  <tr><th>id_read1</th><th>id_read2</th><th>name</th><th>signal_read</th><th>signal_read2</th></tr>
- </thead>
- <tbody>
-[% FOREACH row = model.below %]<tr><td>[% row.0 %]</td><td>[% row.1 %]</td><td>[% row.2 %]</td><td>[% row.3 %]</td><td>[% row.4 %]</td></tr>[% END %]
- </tbody>
-</table>
-
-<h3>Between</h3>
-<table id="int_between" class="sortable zebra">
- <thead>
-  <tr><th>id_read1</th><th>id_read2</th><th>name</th><th>signal_read</th><th>signal_read2</th></tr>
- </thead>
- <tbody>
-[% FOREACH row = model.between %]<tr><td>[% row.0 %]</td><td>[% row.1 %]</td><td>[% row.2 %]</td><td>[% row.3 %]</td><td>[% row.4 %]</td></tr>[% END %]
- </tbody>
-</table>
-
-<h3>Above</h3>
-<table id="int_above" class="sortable zebra">
- <thead>
-  <tr><th>id_read1</th><th>id_read2</th><th>name</th><th>signal_read</th><th>signal_read2</th></tr>
- </thead>
- <tbody>
-[% FOREACH row = model.above %]<tr><td>[% row.0 %]</td><td>[% row.1 %]</td><td>[% row.2 %]</td><td>[% row.3 %]</td><td>[% row.4 %]</td></tr>[% END %]
- </tbody>
-</table>
