@@ -1,13 +1,0 @@
-<h2>Unknown method '[% model.aspect %]' in view '[% model.model_type%]'</h2>
-
-<p>You have attempted to to call method '[% model.aspect %]' through view '[% model.model_type%]' which is not a
-legitimate method in NPG tracking.</p>
-
-<p>Note that 'list' and 'read' are standard method names, and one of these may be shown or appended to the method
-which was attempting to be called, even though this is not shown on the url</p>
-
-<p>If you feel you should be able to use this method (either because it has
-been previously available, or because you think it should do a particular
-function),<br />
-please email <a href="mailto:seq-help@sanger.ac.uk">seq-help@sanger.ac.uk</a>
-with this method name, the full url, and why you called it. We will be happy to assist you.</p>
