@@ -1,1 +1,0 @@
-[% PROCESS run_read_xml.tt2 %]
