@@ -1,12 +1,7 @@
-#########
-# Author:        rmp
-# Created:       2007-03-28
-#
-
 package npg::controller;
+
 use strict;
 use warnings;
-
 use base qw(ClearPress::controller);
 
 use npg::decorator;
@@ -41,7 +36,6 @@ use npg::view::run_annotation;
 use npg::view::run_status;
 use npg::view::run_lane;
 use npg::view::run;
-use npg::view::error;
 use npg::view::user;
 use npg::view::user2usergroup;
 use npg::view::usergroup;
@@ -55,41 +49,25 @@ our $VERSION = '0';
 
 sub session {
   my ($self, $util) = @_;
-  if($self->{session}) {
-    return $self->{session};
+
+  if(!$self->{'session'}) {
+    my $session   = $self->decorator($util)->session();
+    my $pkg       = $util->config->val('application', 'namespace');
+    my $appname   = $pkg || $ENV{SCRIPT_NAME};
+    $session->{$appname} ||= {};
+    $self->{'session'} = $session->{$appname};
   }
 
-  my $session   = $self->decorator($util)->session();
-  my $pkg       = $util->config->val('application', 'namespace');
-  my $appname   = $pkg || $ENV{SCRIPT_NAME};
-  $session->{$appname} ||= {};
-  $self->{session} = $session->{$appname};
-
-  return $self->{session};
+  return $self->{'session'};
 }
 
 sub decorator {
   my ($self, $util) = @_;
 
-  if($self->{decorator}) {
-    return $self->{decorator};
+  if(!$self->{'decorator'}) {
+    $self->{'decorator'} = npg::decorator->new({ cgi => $util->cgi(),});
   }
-  my $decorator   = npg::decorator->new({ cgi => $util->cgi(),});
-  #########
-  # support unauthenticated pipeline user
-  #
-  if(!$decorator->username() && $util->cgi->param('pipeline')) {
-    #########
-    # Casually bypass all security for pipeline purposes.
-    # Should probably be coupled with a hostname test for il\d+\-win or il\d+proc
-    # Or IP-based restrictions
-    #
-    $decorator->username('pipeline');
-  } else {
-    $decorator->username(lc $decorator->username());
-  }
-  $self->{decorator} = $decorator;
-  return $decorator;
+  return $self->{'decorator'};
 }
 
 1;
@@ -107,9 +85,9 @@ npg::controller - NPG tracking controller
 
 =head1 SUBROUTINES/METHODS
 
-=head2 session - SangerWeb-specific session grabber
+=head2 session
 
-=head2 decorator - creates/returns a decorator object for the application
+=head2 decorator
 
 =head1 DIAGNOSTICS
 
@@ -119,83 +97,9 @@ npg::controller - NPG tracking controller
 
 =over
 
-=item CGI
-
-=item Carp
-
 =item ClearPress::controller
 
-=item English -no_match_vars
-
-=item POSIX strftime
-
 =item base
-
-=item npg::decorator
-
-=item npg::model::administration
-
-=item npg::model::instrument
-
-=item npg::model::instrument_format
-
-=item npg::model::manufacturer
-
-=item npg::model::run
-
-=item npg::model::run_annotation
-
-=item npg::model::run_lane
-
-=item npg::model::run_lane_annotation
-
-=item npg::model::run_status
-
-=item npg::model::search
-
-=item npg::model::usage
-
-=item npg::model::user
-
-=item npg::model::user2usergroup
-
-=item npg::model::usergroup
-
-=item npg::view::administration
-
-=item npg::view::error
-
-=item npg::view::instrument
-
-=item npg::view::instrument_format
-
-=item npg::view::instrument_mod
-
-=item npg::view::instrument_status
-
-=item npg::view::manufacturer
-
-=item npg::view::run
-
-=item npg::view::run_annotation
-
-=item npg::view::run_lane
-
-=item npg::view::run_lane_annotation
-
-=item npg::view::run_status
-
-=item npg::view::run_status_dict
-
-=item npg::view::search
-
-=item npg::view::usage
-
-=item npg::view::user
-
-=item npg::view::user2usergroup
-
-=item npg::view::usergroup
 
 =item strict
 
@@ -213,7 +117,7 @@ Roger M Pettett
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2008 GRL, by Roger Pettett
+Copyright (C) 2016 GRL
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
