@@ -1,4 +1,0 @@
-<search_results>
-  <result id_run="1000" tags="good" />
-  <result id_run="1001" tags="bad" />
-</search_results>
