@@ -1,1 +1,0 @@
-<div class="error_box"><h3>Authentication Error</h3><p>Error: <br /><br />You do not have sufficient permissions to perform this action. You may have forgotten to log in.<br />Click <a href="https://enigma.sanger.ac.uk/sso/login">here</a> to login or use the key icon.<br /><br /></p><p>If you feel that this is incorrect (i.e. you are already logged in), then please email <a href="mailto:seq-help">seq-help</a><br />requesting a change of group status for the function you are trying to perform.</p></div>
