@@ -1,1 +1,0 @@
-<div class="error_box"><h3>We have been alerted to this problem</h3><p>Error: </p></div>
